--- a/Proyecto/assets/css/style.css
+++ b/Proyecto/assets/css/style.css
@@ -30,6 +30,8 @@ html, body {
     width: 100%;
 }
 
+
+
 .busqueda {
     position: relative;
     display: flex;
@@ -111,10 +113,10 @@ html, body {
     justify-content: center;
     padding: 10px 0; /* Espaciado alrededor de la paginación */
     position: absolute; /* Posición absoluta para que quede fija pero respetando el footer */
-    bottom: 120px; /* Ajusta la posición para que quede justo por encima del footer (ajusta este valor si es necesario) */
+    bottom: 135px; /* Ajusta la posición para que quede justo por encima del footer */
     left: 0;
-    width: 100%; /* Hace que la paginación ocupe todo el ancho */
-    background-color: #F6F4F8; /* Fondo de paginación */
+    width: 100%;
+    background-color: #F6F4F8;
     z-index: 100; /* Asegura que esté encima de otros elementos */
 }
 
