--- a/Proyecto/assets/css/style.css
+++ b/Proyecto/assets/css/style.css
@@ -203,6 +203,10 @@ html, body {
     height: 100vh;
 }
 
+.divBotonGuardar {
+    padding-top: 1em;
+}
+
 /* DATOS USUARIO BLACK */
 
 .estiloTablaBlack {
