--- a/Proyecto/assets/css/style.css
+++ b/Proyecto/assets/css/style.css
@@ -176,7 +176,7 @@ html, body {
     font-family: Mulish-Regular;
 }
 
-.actualizarFoto {
+.diseñoBoton {
     background-color: #4DBAD9;
     border: none;
     color: white;
