--- a/Proyecto/assets/css/pregunta.css
+++ b/Proyecto/assets/css/pregunta.css
@@ -1,50 +1,76 @@
-
-.contenedorPreguntaYRespuesta
-{
-    min-height: 80vh;
-    display: grid;                   
-    grid-template-columns: 20% 60% 20%;  /* Definimos 3 columnas con el porcentaje indicado */
-    width: 100%;     
-}
-
-.cont1, .cont2, .cont3
-{
-    border: 2px solid red;
-    text-align: center;              /* Centrar el texto */
-    display: flex;
-    justify-content: center;
-    align-items: center;   
-}
-
-
-.cont1
+.contenedorPreguntasYRespuestas
 {
     display: flex;
     flex-direction: column;
-    justify-content: right;
 }
 
-.fotoUsuarioPregunta
-{
-    padding-top: 1em;
+.contenedorPregunta {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 200px 4fr 4fr 1fr;
+    grid-template-rows: 1fr 3fr 1fr;
+    gap: 10px;
+    padding: 20px;
+    /*box-sizing: border-box;*/
+    grid-template-areas: 
+        "fotoUsuarioPregunta preguntaTitulo preguntaTitulo ."
+        ". descripcionPregunta descripcionPregunta ."
+        ". . panelDeBotones .";
+}
+
+.fotoUsuarioPregunta {
+    grid-area: fotoUsuarioPregunta;
+    background-color: blue;
     display: flex;
-    flex-direction: row;
+    align-items: center;
     justify-content: right;
 }
 
-.fotoUsuarioPregunta img
-{
-    max-width: 40%;
-    max-height: 50%;
-    border-radius: 3.13em;
+.fotoUsuarioPregunta img {
+    width: 50%;
+    height: auto;
+    border-radius: 50%;
 }
 
-
-.cont2
-{
-
+.preguntaTitulo {
+    grid-area: preguntaTitulo;
+    background-color: green;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    font-size: 1.5rem;
+    font-weight: bold;
 }
-.cont3
+
+.descripcionPregunta {
+    grid-area: descripcionPregunta;
+    background-color: red;
+    padding: 10px;
+    font-size: 1rem;
+    line-height: 1.5;
+}
+
+.panelDeBotones {
+    grid-area: panelDeBotones;
+    background-color: chartreuse;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding: 10px;
+}
+
+.contenedorRespuestaDivididor
 {
-   
+    background-color: aliceblue;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 200px 4fr 4fr 1fr;
+    grid-template-rows: 1fr 3fr 1fr;
+    gap: 10px;
+    padding: 20px;
+    /*box-sizing: border-box;*/
+    grid-template-areas: 
+        ". respuesta preguntaTitulo ."
+        ". descripcionPregunta descripcionPregunta ."
+        ". . panelDeBotones .";
 }
