--- a/Proyecto/assets/css/pregunta.css
+++ b/Proyecto/assets/css/pregunta.css
@@ -64,13 +64,35 @@
     background-color: aliceblue;
     width: 100%;
     display: grid;
-    grid-template-columns: 200px 4fr 4fr 1fr;
+    grid-template-columns: 1fr 100px 4fr 4fr 1fr ;
     grid-template-rows: 1fr 3fr 1fr;
     gap: 10px;
     padding: 20px;
     /*box-sizing: border-box;*/
     grid-template-areas: 
-        ". respuesta preguntaTitulo ."
-        ". descripcionPregunta descripcionPregunta ."
-        ". . panelDeBotones .";
+        ". fotoUsuarioRespuesta respuesta respuesta ."
+        ". . respuesta respuesta ."
+        ". . . panelDeBotones .";
+}
+
+.fotoUsuarioRespuesta
+{
+    grid-area: fotoUsuarioRespuesta;
+    background-color: blue;
+    display: flex;
+    align-items: center;
+    justify-content: right;
+}
+.fotoUsuarioRespuesta img {
+    width: 50%;
+    height: auto;
+    border-radius: 50%;
+}
+.respuesta
+{
+    grid-area: respuesta;
+    background-color: grey;
+    padding: 10px;
+    font-size: 1rem;
+    line-height: 1.5;
 }
