Campos con readonly

--- a/Proyecto/assets/css/darkModeStyle.css
+++ b/Proyecto/assets/css/darkModeStyle.css
@@ -232,7 +232,7 @@ footer span {
 
 /* Panel Lateral */
 .panelLateral {
-    background-color: #1A1A1A; /* Mantén el color de la barra lateral o ajusta si lo deseas */
+    background-color: #162F3B; /* Mantén el color de la barra lateral o ajusta si lo deseas */
     height: 100%;
     width: 17em;
     align-content: center;
