--- a/Proyecto/assets/css/style.css
+++ b/Proyecto/assets/css/style.css
@@ -242,7 +242,6 @@ footer span {
 .perfil {
     margin: 0 auto;
     text-align: center;
-    font-family: Mulish-Regular;
     align-items: center;
 }
 
@@ -284,6 +283,38 @@ input[readonly] {
     border: 1px solid #ccc;
 }
 
+.botonPassword {
+    background-color: #4DBAD9;
+    border: none;
+    margin: 0 5px;
+    padding: 10px 20px;
+    cursor: pointer;
+    border-radius: 5px;
+    font-size: 16px;
+    color: white;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+.botonPassword:hover {
+    background-color: #4DBAD9;
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+/* Cambiar Contraseña */
+
+.paginaPassword {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+}
+
+.formPassword {
+    padding: 2em;
+}
 
 /* Panel Lateral */
 
