Cambiar contraseña solucionado

--- a/Proyecto/assets/css/style.css
+++ b/Proyecto/assets/css/style.css
@@ -303,6 +303,10 @@ input[readonly] {
     cursor: pointer;
 }
 
+.botonesPerfil {
+    margin: 1em;
+}
+
 /* Cambiar Contraseña */
 
 .paginaPassword {
