--- a/Proyecto/assets/css/darkModeStyle.css
+++ b/Proyecto/assets/css/darkModeStyle.css
@@ -453,3 +453,188 @@ strong {
     border-radius: 5px;
 }
 
+
+
+
+
+/*PREGUNTA Y RESPUESTA*/
+
+.contenedorPreguntasYRespuestas
+{
+    display: flex;
+    flex-direction: column;
+}
+
+.contenedorPregunta {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 200px 4fr 4fr 1fr;
+    grid-template-rows: 1fr 3fr 1fr;
+    gap: 10px;
+    padding: 20px;
+    /*box-sizing: border-box;*/
+    grid-template-areas: 
+        "fotoUsuarioPregunta preguntaTitulo preguntaTitulo ."
+        ". descripcionPregunta descripcionPregunta ."
+        ". . panelDeBotones .";
+}
+
+.fotoUsuarioPregunta {
+    grid-area: fotoUsuarioPregunta;
+    background-color: blue;
+    display: flex;
+    align-items: center;
+    justify-content: right;
+}
+
+.fotoUsuarioPregunta img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+}
+
+.preguntaTitulo {
+    grid-area: preguntaTitulo;
+    background-color: green;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
+.descripcionPregunta {
+    grid-area: descripcionPregunta;
+    background-color: red;
+    padding: 10px;
+    font-size: 1rem;
+    line-height: 1.5;
+}
+
+.panelDeBotones {
+    grid-area: panelDeBotones;
+    background-color: chartreuse;
+    display: flex;
+    
+    align-items: center;
+    justify-content: flex-end;
+    padding: 10px;
+}
+
+
+.panelDeBotones .bi {
+    font-size: 24px; 
+}
+
+
+.bi-lg {
+    font-size: 1.5rem;
+}
+
+.bi-xl {
+    font-size: 2rem;
+}
+
+.contenedorRespuesta
+{
+
+
+}
+
+.contenedorRespuestaDivididor
+{
+    background-color: aliceblue;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 100px 4.75fr 1fr ;
+    grid-template-rows: 1fr 2fr 1fr;
+    gap: 10px;
+    padding: 20px;
+    /*box-sizing: border-box;*/
+    grid-template-areas: 
+        ". fotoUsuarioRespuesta  respuesta ."
+        ". .  respuesta ."
+        ". .  panelDeBotones .";
+}
+
+.fotoUsuarioRespuesta
+{
+    grid-area: fotoUsuarioRespuesta;
+    background-color: blue;
+    display: flex;
+    align-items: center;
+    justify-content: right;
+}
+.fotoUsuarioRespuesta img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+}
+.respuesta
+{
+    grid-area: respuesta;
+    background-color: grey;
+    padding: 10px;
+    font-size: 1rem;
+    line-height: 1.5;
+}
+
+.airplane-down {
+    display: inline-block !important;
+    transform: rotate(180deg) !important;
+    transition: transform 0.2s;
+}
+
+
+
+.botonPanel
+{
+    background-color: #1A1A1A;
+}
+
+
+.panelDeBotones .bi-airplane {
+    color: #4dabf7; 
+    transition: color 0.2s ease;
+}
+
+
+.panelDeBotones .bi-airplane:hover {
+    color: #ffffff; 
+    cursor: pointer;
+}
+
+
+.panelDeBotones .bi-airplane.voted {
+    color: #4dabf7;
+}
+
+
+
+.panelDeBotones .bi-bookmark-fill {
+    color: #4dabf7;
+    transition: color 0.2s ease;
+}
+.panelDeBotones .bi-bookmark-fill:hover {
+    color: #ffffff; 
+    cursor: pointer;
+}
+
+.panelDeBotones .bi {
+    color: #4dabf7;
+    transition: color 0.2s ease;
+}
+.panelDeBotones .bi:hover {
+    color: #ffffff; 
+    cursor: pointer;
+}
+
+
+.imagenRespuesta {
+    max-width: 300px; /* Ancho máximo fijo */
+    height: auto; /* Mantiene la proporción */
+    display: block; /* Permite que otros elementos se alineen */
+    align-items: center;
+}
+
+
