--- a/Proyecto/assets/css/style.css
+++ b/Proyecto/assets/css/style.css
@@ -536,6 +536,7 @@ strong {
 
 /*PREGUNTA Y RESPUESTA*/
 
+
 .contenedorPreguntasYRespuestas
 {
     display: flex;
@@ -543,6 +544,7 @@ strong {
 }
 
 .contenedorPregunta {
+
     width: 100%;
     display: grid;
     grid-template-columns: 200px 4fr 4fr 1fr;
@@ -558,21 +560,20 @@ strong {
 
 .fotoUsuarioPregunta {
     grid-area: fotoUsuarioPregunta;
-    background-color: blue;
     display: flex;
     align-items: center;
     justify-content: right;
 }
 
 .fotoUsuarioPregunta img {
-    width: 50%;
-    height: auto;
+    width: 100px;
+    height: 100px;
     border-radius: 50%;
 }
 
 .preguntaTitulo {
+    background-color: #FFFFFF;
     grid-area: preguntaTitulo;
-    background-color: green;
     padding: 10px;
     display: flex;
     align-items: center;
@@ -581,8 +582,8 @@ strong {
 }
 
 .descripcionPregunta {
+    background-color: #FFFFFF;
     grid-area: descripcionPregunta;
-    background-color: red;
     padding: 10px;
     font-size: 1rem;
     line-height: 1.5;
@@ -590,17 +591,20 @@ strong {
 
 .panelDeBotones {
     grid-area: panelDeBotones;
-    background-color: chartreuse;
     display: flex;
-    
     align-items: center;
     justify-content: flex-end;
     padding: 10px;
 }
 
+.panel-botones button{
+    border: 0;
+}
+
 
 .panelDeBotones .bi {
     font-size: 24px; 
+    border: 0;
 }
 
 
@@ -613,45 +617,6 @@ strong {
 }
 
 
-
-.contenedorRespuestaDivididor
-{
-    background-color: aliceblue;
-    width: 100%;
-    display: grid;
-    grid-template-columns: 1fr 100px 4fr 4fr 1fr ;
-    grid-template-rows: 1fr 3fr 1fr;
-    gap: 10px;
-    padding: 20px;
-    /*box-sizing: border-box;*/
-    grid-template-areas: 
-        ". fotoUsuarioRespuesta respuesta respuesta ."
-        ". . respuesta respuesta ."
-        ". . . panelDeBotones .";
-}
-
-.fotoUsuarioRespuesta
-{
-    grid-area: fotoUsuarioRespuesta;
-    background-color: blue;
-    display: flex;
-    align-items: center;
-    justify-content: right;
-}
-.fotoUsuarioRespuesta img {
-    width: 90px;
-    height: 80px;
-    border-radius: 50%;
-}
-.respuesta
-{
-    grid-area: respuesta;
-    background-color: grey;
-    padding: 10px;
-    font-size: 1rem;
-    line-height: 1.5;
-}
-
 .airplane-down {
     display: inline-block !important;
     transform: rotate(180deg) !important;
@@ -663,33 +628,65 @@ strong {
 .botonPanel
 {
     background-color: #f4f4f9;
+    border: 0px;
+    padding: .5em;
 }
 
-
-.panelDeBotones .bi-airplane {
-    color: #4dabf7; 
+.panelDeBotones .bi {
+    color: #4dabf7;
     transition: color 0.2s ease;
 }
-
-
-.panelDeBotones .bi-airplane:hover {
-    color: #1A1A1A; 
+.panelDeBotones .bi:hover {
+    color: #ffffff; 
     cursor: pointer;
 }
 
 
-.panelDeBotones .bi-airplane.voted {
-    color: #4dabf7;
+
+.contenedorRespuestaDivididor
+{
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 100px 4.75fr 1fr ;
+    grid-template-rows: 1fr 2fr 1fr;
+    gap: 10px;
+    padding: 20px;
+    /*box-sizing: border-box;*/
+    grid-template-areas: 
+        ". fotoUsuarioRespuesta  respuesta ."
+        ". .  respuesta ."
+        ". .  panelDeBotones .";
+}
+
+.fotoUsuarioRespuesta
+{
+    grid-area: fotoUsuarioRespuesta;
+    display: flex;
+    align-items: center;
+    justify-content: right;
+}
+.fotoUsuarioRespuesta img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+}
+.respuesta
+{
+    grid-area: respuesta;
+    padding: 10px;
+    font-size: 1rem;
+    line-height: 1.5;
+    background-color: #FFFFFF;
 }
 
 
 
-.panelDeBotones .bi-bookmark-fill {
-    color: #4dabf7;
-    transition: color 0.2s ease;
+
+.imagenRespuesta {
+    max-width: 300px; /* Ancho máximo fijo */
+    height: auto; /* Mantiene la proporción */
+    display: block; /* Permite que otros elementos se alineen */
+    align-items: center;
 }
-.panelDeBotones .bi-bookmark-fill:hover {
-    color: #1A1A1A; 
-    cursor: pointer;
-}
+
 
